<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_top"
        android:paddingHorizontal="24dp">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="#E6E6E6"
            app:cardBackgroundColor="#E6E6E6"
            app:cardCornerRadius="3dp" />

        <LinearLayout
            android:id="@+id/linearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                android:text="@string/add_book"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/judul_book"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPenulis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/penulis"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTahun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/tahun_terbit"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHalaman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/jumlah_halaman"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBahasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/bahasa"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/genre"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/etRak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/rak"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNoRak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/no_rak"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/stock"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChooseImg"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/pilih_gambar"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddBook"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/add_book"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>