<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginStart="-35dp"
                android:layout_marginTop="-50dp"
                android:src="@drawable/circle_login" />

            <ImageView
                android:id="@+id/ic_app"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_app" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ic_app"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/darker_gray" />

                <CheckBox
                    android:id="@+id/tvPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/policy_and_terms" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:minHeight="58dp"
                    android:onClick="Signup"
                    android:text="@string/sign_up"
                    app:backgroundTint="@color/purple_700"
                    app:cornerRadius="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/have_account" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:minHeight="58dp"
                    android:onClick="Login"
                    android:text="@string/log_in"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>