<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgLogout"
                android:onClick="Logout"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_logout"
                app:tint="@color/white" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/radioGroupMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarMain"
        android:background="@color/purple_700"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <RadioButton
            android:id="@+id/rbBook"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/buku"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbPinjam"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/pinjam"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbKembali"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/kembali"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/contentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/radioGroupMain"
        android:layout_alignParentStart="true" />

</RelativeLayout>