<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgBook"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imgBook"
        android:layout_marginHorizontal="16dp"
        android:layout_toEndOf="@id/imgBook"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPenulis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/imgBook"
        android:lines="1" />

    <TextView
        android:id="@+id/tvHalaman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPenulis"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/imgBook"
        android:lines="1" />

    <TextView
        android:id="@+id/tvPeminjam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHalaman"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/imgBook"
        android:drawableStart="@drawable/ic_peminjam"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:lines="1"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearPinjam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPeminjam"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/imgBook"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tanggal_mulai" />

        <TextView
            android:id="@+id/tvMulai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearKembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearPinjam"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/imgBook"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tanggal_kembali" />

        <TextView
            android:id="@+id/tvKembali"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvKembalikan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvPeminjam"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/imgUbah"
        android:background="@drawable/bg_kembalikan"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/kembalikan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgUbah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvPeminjam"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linearKembali"
        android:layout_marginTop="6dp"
        android:background="@color/gray" />
</RelativeLayout>